Revamped and corrected header vertical alignment

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -7,6 +7,7 @@
 	position: fixed;
 	top:0;
 	min-height:$header-height;
+	line-height: $header-height;
 	width: 100%;
 	z-index: 2;
 	color:white;
@@ -21,19 +22,30 @@
 	}
 }
 
+@media (max-width:768px) {
+	.header-menu {
+		min-height:$header-height/2;
+		line-height: $header-height/2;
+	}
+}
+@media (min-width:769px) and (max-width:991px) {
+	.header-menu {
+		min-height:$header-height/1.5;
+		line-height: $header-height/1.5;
+	}
+}
+
 $transparentshadow: rgba(black, 0.3);
 .header-menu.dark-bg {
 	box-shadow:0px 6px 6px $transparentshadow;
 }
 
 .site-logo {
-	font-size:24px;
+	font-size: inherit;
+	line-height: inherit;
 	margin:0;
 	font-weight:bold;
 	text-transform:uppercase;
-	img {
-		vertical-align: 2px;
-	}
 }
 
 .site-menu {
@@ -43,7 +55,6 @@ $transparentshadow: rgba(black, 0.3);
 	  @include transition-timing-function(ease-in);
 		display: inline-block;
 		padding:0 15px;
-		height: 40px;
 		&.border-left:before {
 			content:url(../images/nav-vertical-divider.png);
 			border-left: 1px solid #ccc;
@@ -104,14 +115,17 @@ $transparentshadow: rgba(black, 0.3);
 	  @include transition-duration(0.2s);
 	  @include transition-timing-function(ease-in);
 		fill:#ddd;
-		&:hover,
-		&:focus {
-			background:inherit;
-			fill:$brown;
-			.dark-bg & {
-				fill:#ddd;
-			}
-		}
+	}
+}
+
+.instagram-link:hover .icon-fill,
+.instagram-link:focus .icon-fill,
+.facebook-link:hover .icon-fill,
+.facebook-link:focus .icon-fill {
+	background:inherit;
+	fill:$brown;
+	.dark-bg & {
+		fill:#ddd;
 	}
 }
 
@@ -175,15 +189,8 @@ $transparentshadow: rgba(black, 0.3);
 } 
 
 
-@media (min-width: 800px) {
-	.site-menu {
-		line-height:$header-height;
-	}
-}
-
 @media (min-width: 992px) {
 	.site-logo {
-		line-height:100px;
 		text-align:left;
 	}
 	.page-banner {
